<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="onemessage.jmw.com.onemessage.MainActivity">

    <TextView
        android:text="@string/shortcutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shortcutNameLabel"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/shortcutNameText"
        android:selectAllOnFocus="false"
        android:background="@drawable/border_line"
        android:layout_below="@+id/shortcutNameLabel"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="5dp"
        android:textColor="@color/text"
        android:textCursorDrawable="@drawable/cursor"
        android:paddingLeft="3dp"
        />

    <TextView
        android:text="@string/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumberLabel"
        android:layout_below="@+id/shortcutNameText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <onemessage.jmw.com.onemessage.SmallButton
        android:text="@string/addShortcutToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newMessageButton"
        android:layout_toEndOf="@+id/shortcutNameText"
        android:layout_alignBottom="@+id/shortcutNameText"
        android:layout_alignParentTop="true"
        android:textColor="@color/text"
        android:enabled="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneNumberText"
        android:background="@drawable/border_line"
        android:layout_below="@+id/phoneNumberLabel"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/contactsButton"
        android:layout_marginEnd="5dp"
        android:textColor="@color/text"
        android:textCursorDrawable="@drawable/cursor"
        android:paddingLeft="3dp"/>

    <TextView
        android:text="@string/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/messageLabel"
        android:layout_below="@+id/contactsButton"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:maxLength="160"
        android:inputType="textMultiLine"
        android:ems="0"
        android:id="@+id/messageText"
        android:textIsSelectable="false"
        android:gravity="top|left"
        android:background="@drawable/border_line"
        android:layout_below="@+id/messageLabel"
        android:layout_alignParentStart="true"
        android:textColor="@color/text"
        android:textCursorDrawable="@drawable/cursor"
        android:paddingLeft="3dp"
        android:layout_marginEnd="5dp"
        android:layout_toLeftOf="@+id/contactsButton" />

    <GridView
        android:id="@+id/iconGrid"
        android:gravity="center_horizontal"
        android:numColumns="auto_fit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/shortcutIconLabel" />


    <onemessage.jmw.com.onemessage.SmallButton
        android:text="@string/contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contactsButton"
        android:layout_alignBottom="@+id/phoneNumberText"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/phoneNumberLabel"
        android:textColor="@color/text"/>

    <TextView
        android:text="@string/shortcutIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shortcutIconLabel"
        android:layout_below="@+id/messageText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <onemessage.jmw.com.onemessage.SmallButton
        android:text="Insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:id="@+id/insertTemplateButton"
        android:layout_alignTop="@+id/messageText"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/messageText"
        android:layout_toRightOf="@+id/messageText" />


</RelativeLayout>
